  strings.

* Improved algorithm for countSetBits() in BitString.  New version is
  significantly faster (10-15 times faster).

* Changed the algorithm used to implement BinomialGenerator for better
  performance.

* Added new termination condition to detect when the evolution has stagnated
  (i.e. the fitness has not improved for a certain number of generations).


Changes in version 0.4.2
------------------------

* Added a second parameter to the FitnessEvaluator interface to enable fitness
  calculations to take into account an individual's environment (the remainder
  of the population) when assigning a score.

* Minor tweak to improve the distribution of fitness evaluations between
  threads on multi-processor machines.

* Fix for ISSUE#3 (bad Throwable handling in InteractiveSelection and
  RendererAdapter)

* Made AbstractEvolutionEngine interruptible.

* Added new constructor to StandaloneEvolutionEngine to allow users to provide
  a custom ThreadFactory.

* Fix for ISSUE#4 (unreliable final result with non-natural fitness function).


Changes in version 0.4.1
------------------------

* Added new constructors to NumberGenerator implementations to enable the
  parameters to be dynamic.

* Several more unit tests for significantly improved coverage.  Fixed 2 minor
  bugs detected by these new tests.

* Added some GUI control components to assist in building Swing GUIs for
  evolutionary programs.

* Moved the SwingConsole class into the new Swing components package
  (org.uncommons.watchmaker.swing) so that the core framework does not contain
  any dependencies on a particular presentation layer.

* Added evolutionary Sudoku solver example application.

* Included source code for the examples in the release archives.


Changes in version 0.4.0
------------------------

* Introduced framework support for interactive evolutionary algorithms.

* New example application based on Richard Dawkins' biomorph experiment.