@@ -14,7 +14,6 @@
     <orderEntry type="sourceFolder" forTests="false" />
     <orderEntry type="module" module-name="util" />
     <orderEntry type="module" module-name="maths" />
-    <orderEntry type="module" module-name="gui" />
     <orderEntry type="library" name="testng-5.6-jdk15" level="project" />
     <orderEntryProperties />
   </component>
