@@ -2,16 +2,18 @@
 <module version="4" relativePaths="true" type="JAVA_MODULE">
   <component name="ModuleRootManager" />
   <component name="NewModuleRootManager" inherit-compiler-output="false">
-    <output url="file://$MODULE_DIR$/../../gui/build/classes/main" />
+    <output url="file://$MODULE_DIR$/../../swing/build/classes/main" />
     <exclude-output />
-    <output-test url="file://$MODULE_DIR$/../../gui/build/classes/test" />
-    <content url="file://$MODULE_DIR$/../../gui">
-      <sourceFolder url="file://$MODULE_DIR$/../../gui/src/java/main" isTestSource="false" />
-      <sourceFolder url="file://$MODULE_DIR$/../../gui/src/java/test" isTestSource="true" />
+    <output-test url="file://$MODULE_DIR$/../../swing/build/classes/test" />
+    <content url="file://$MODULE_DIR$/../../swing">
+      <sourceFolder url="file://$MODULE_DIR$/../../swing/src/java/main" isTestSource="false" />
+      <sourceFolder url="file://$MODULE_DIR$/../../swing/src/java/test" isTestSource="true" />
       <excludeFolder url="file://$MODULE_DIR$/../../gui/build" />
     </content>
     <orderEntry type="inheritedJdk" />
     <orderEntry type="sourceFolder" forTests="false" />
+    <orderEntry type="module" module-name="framework" />
+    <orderEntry type="module" module-name="maths" />
     <orderEntry type="library" name="testng-5.6-jdk15" level="project" />
     <orderEntryProperties />
   </component>
