@@ -35,9 +35,9 @@ import javax.swing.JSpinner;
 import javax.swing.SpinnerNumberModel;
 import javax.swing.SpringLayout;
 import javax.swing.SwingUtilities;
-import org.uncommons.gui.SpringUtilities;
-import org.uncommons.gui.SwingBackgroundTask;
 import org.uncommons.maths.random.MersenneTwisterRNG;
+import org.uncommons.swing.SpringUtilities;
+import org.uncommons.swing.SwingBackgroundTask;
 import org.uncommons.watchmaker.framework.EvolutionEngine;
 import org.uncommons.watchmaker.framework.EvolutionObserver;
 import org.uncommons.watchmaker.framework.EvolutionaryOperator;
