@@ -36,11 +36,11 @@ import javax.swing.JPanel;
 import javax.swing.JSpinner;
 import javax.swing.SpinnerNumberModel;
 import javax.swing.SpringLayout;
-import org.uncommons.gui.SpringUtilities;
-import org.uncommons.gui.SwingBackgroundTask;
 import org.uncommons.maths.random.CellularAutomatonRNG;
 import org.uncommons.maths.random.DiscreteUniformGenerator;
 import org.uncommons.maths.random.PoissonGenerator;
+import org.uncommons.swing.SpringUtilities;
+import org.uncommons.swing.SwingBackgroundTask;
 import org.uncommons.watchmaker.framework.EvolutionEngine;
 import org.uncommons.watchmaker.framework.EvolutionObserver;
 import org.uncommons.watchmaker.framework.EvolutionaryOperator;
