@@ -14,7 +14,7 @@
 //   limitations under the License.
 // ============================================================================
 /**
- * <p>This package provides two deterministic, repeatable, pseudo-random number
+ * <p>This package provides deterministic, repeatable, pseudo-random number
  * generators, a set of strategies for seeding them, and classes for generating
  * values from different probability distributions.</p>
  */
