@@ -13,7 +13,7 @@
 //   See the License for the specific language governing permissions and
 //   limitations under the License.
 // ============================================================================
-package org.uncommons.gui;
+package org.uncommons.swing;
 
 import java.awt.Component;
 import java.awt.Graphics;
