@@ -13,7 +13,7 @@
 //   See the License for the specific language governing permissions and
 //   limitations under the License.
 // ============================================================================
-package org.uncommons.gui;
+package org.uncommons.swing;
 
 import java.util.concurrent.CountDownLatch;
 import javax.swing.SwingUtilities;
