@@ -13,7 +13,7 @@
 //   See the License for the specific language governing permissions and
 //   limitations under the License.
 // ============================================================================
-package org.uncommons.gui;
+package org.uncommons.swing;
 
 import javax.swing.SwingUtilities;
 import org.testng.annotations.Test;
