@@ -23,6 +23,9 @@ Changes in version 0.?.?
 * Added new termination condition to detect when the evolution has stagnated
   (i.e. the fitness has not improved for a certain number of generations).
 
+* Moved the the Swing-specific classes from the framework module into what was
+  the Uncommons GUI module, which is now the Watchmaker Swing module.
+
 
 Changes in version 0.4.2
 ------------------------
